fix nav logo placement on mobile

--- a/react-front-end/src/styles/Navbar.css
+++ b/react-front-end/src/styles/Navbar.css
@@ -1,6 +1,6 @@
 .NavbarItems {
     background: linear-gradient(90deg, rgb(110, 94, 254) 0%, rgba(73,63,2521) 100%);
-    height: 80px;
+    height: 90px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -30,6 +30,7 @@
     width: 70vw;
     justify-content: end;
     margin-right: 2rem;
+    margin-top: 10px;
 }
 
 .nav-links {
@@ -40,6 +41,7 @@
 
 .nav-links:hover{
     background-color: #6d76f7;
+    color: #fcc860;
     border-radius: 4px;
     transition: all 0.2s ease-out;
 }
@@ -95,10 +97,9 @@
     }
 
     .navbar-logo{
-        position: absolute;
-        top: 0;
-        left: 0;
-        transform: translate(25%, 50%);
+        position: flex;
+        align-items: center;
+        justify-content: center;
     }
 
     .menu-icon {
